# hdfs-native

./: .gitignore  .gitmodules  .readthedocs.yml  AGENTS.md  Cargo.toml  README.md  TLS_IMPLEMENTATION.md  build.rs  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml  python-release.yml  python-test.yml  python.yml  rust-release.yml  rust-test.yml  rust.yml
crates/hdfs-native/: Cargo.toml  build.rs
crates/hdfs-native-object-store/: Cargo.toml  README.md
crates/hdfs-native-object-store/src/: lib.rs
crates/hdfs-native-object-store/tests/: test_object_store.rs
crates/hdfs-native-objectstore/: Cargo.toml
crates/hdfs-native-objectstore/src/: lib.rs
crates/hdfs-native-objectstore/tests/: test_object_store.rs
crates/hdfs-native/benches/: io.rs  read.rs
crates/hdfs-native/minidfs/: pom.xml
crates/hdfs-native/minidfs/src/main/java/main/: Main.java
crates/hdfs-native/minidfs/src/main/resources/: log4j.properties
crates/hdfs-native/src/: client.rs  error.rs  file.rs  lib.rs  minidfs.rs
crates/hdfs-native/src/common/: config.rs
crates/hdfs-native/src/ec/: gf256.rs
crates/hdfs-native/src/hdfs/: block_reader.rs  block_writer.rs  connection.rs  datanode.rs  mod.rs  protocol.rs  proxy.rs
crates/hdfs-native/src/security/: digest.rs  gssapi.rs  mod.rs  sasl.rs  user.rs
crates/hdfs-native/tests/: test_ec.rs  test_integration.rs  test_read.rs  test_viewfs.rs  test_write.rs  test_write_resiliency.rs
crates/hdfs-native/tests/common/: mod.rs
dev/: hdfs-site.xml  log4j.properties  start-hdfs.sh
minidfs/: pom.xml
minidfs/src/main/java/: Main.java
minidfs/src/main/resources/: log4j.properties
python/: Cargo.toml  README.md  conftest.py  pyproject.toml  requirements-dev.txt
python/docs/source/: api.rst  conf.py  index.rst  usage.rst
python/docs/source/api/: hdfs_native.AclEntry.rst  hdfs_native.AclStatus.rst  hdfs_native.AsyncClient.rst  hdfs_native.AsyncFileReader.rst  hdfs_native.AsyncFileWriter.rst  hdfs_native.Client.rst  hdfs_native.ContentSummary.rst  hdfs_native.FileReader.rst  hdfs_native.FileStatus.rst  hdfs_native.FileWriter.rst  hdfs_native.WriteOptions.rst
python/hdfs_native/: __init__.py  _internal.pyi  cli.py  fsspec.py
python/python/hdfs_native/: __init__.py  __init__.pyi  _internal.pyi
python/src/: error.rs  lib.rs  minidfs.rs
python/tests/: conftest.py  minidfs.py  test_benchmark.py  test_cli.py  test_fsspec.py  test_integration.py
python/tests/benchmarks/: concurrent.py  listing.py
rust/: Cargo.toml  OPTION4_IMPLEMENTATION_COMPLETE.md  STEP4_COMPLETION_SUMMARY.md  STREAM_ABSTRACTION_OPTIONS.md  build.rs  generate_gssapi_bindings.sh
rust/benches/: ec.rs  io.rs  rpc.rs
rust/c_src/: gssapi_mit.h
rust/examples/: simple.rs  tls_auth_example.rs
rust/minidfs/: pom.xml
rust/minidfs/src/main/java/: Main.java
rust/minidfs/src/main/java/main/: Main.java
rust/minidfs/src/main/resources/: log4j.properties
rust/src/: acl.rs  client.rs  connection.rs  error.rs  file.rs  glob.rs  lib.rs  main.rs  minidfs.rs  object_store.rs  sync.rs  test.rs
rust/src/common/: config.rs
rust/src/ec/: gf256.rs  matrix.rs  mod.rs
rust/src/hdfs/: block_reader.rs  block_writer.rs  connection.rs  connection_stream.rs  crypto.rs  datanode.rs  ec.rs  file.rs  mod.rs  protocol.rs  proxy.rs  replace_datanode.rs
rust/src/proto/: hadoop.common.rs  hadoop.hdfs.rs  mod.rs
rust/src/security/: digest.rs  gssapi.rs  gssapi_bindings.rs  kms.rs  mod.rs  sasl.rs  scram.rs  tls.rs  user.rs
rust/tests/: test_ec.rs  test_integration.rs  test_kms.rs  test_object_store.rs  test_read.rs  test_read_resiliency.rs  test_tls_debug.rs  test_tls_simple.rs  test_trash.rs  test_viewfs.rs  test_write.rs  test_write_resiliency.rs
rust/tests/common/: ec.rs  minidfs.rs  mod.rs
src/: client.rs  connection.rs  error.rs  lib.rs  main.rs  object_store.rs
src/common/: config.rs
src/hdfs/: datanode.rs  file.rs  mod.rs  protocol.rs  proxy.rs
src/proto/: mod.rs
src/security/: mod.rs  sasl.rs  user.rs
tests/: test_integration.rs
tests/common/: minidfs.rs  mod.rs
