[package]
name = "hdfs-native"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.11"
prost-types = "0.11"
roxmltree = "0.18"
rsasl = { version = "1", optional = true }
rsasl2 = { version = "2.0.0", features = ["gssapi", "provider", "registry_static", "unstable_custom_mechanism"], path = "./rsasl2", package = "rsasl", optional = true }
uuid = { version = "1.3", features = ["v4"] }
url = "2.3"
libgssapi = { version = "0.6.4", default_features = false }
users = { version = "0.11", default_features = false }
thiserror = "1.0"
log = "0.4"
futures = "0.3"
tokio = { version = "1.28", features = ["rt", "net", "io-util", "macros"] }
object_store = { version = "0.6", optional = true }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4.26", optional = true }

[build-dependencies]
prost-build = { version = "0.11" }

[dev-dependencies]
base64 = "0.21.2"
env_logger = "0.10.0"
tempfile = "3.5"
which = "4.4"

[features]
default = ["rsasl2", "object_store"]
object_store = ["dep:object_store", "dep:async-trait", "dep:chrono"]
rsasl1 = ["dep:rsasl"]
rsasl2 = ["dep:rsasl2"]

[profile.dev]
split-debuginfo = "packed"
