[package]
name = "hdfs-native"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "0.11"
prost-types = "0.11"
roxmltree = "0.18"
rsasl = { version = "2.0.0", features = ["gssapi", "provider", "registry_static", "unstable_custom_mechanism"], path = "./rsasl", optional = true }
uuid = { version = "1.3", features = ["v4"] }
url = "2.3"
libgssapi = { version = "0.6.4", default_features = false }
users = { version = "0.11", default_features = false }
thiserror = "1.0"
log = "0.4"
futures = "0.3"
tokio = { version = "1.28", features = ["rt", "net", "io-util", "macros", "sync"] }
object_store = { version = "0.6", optional = true }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4.26", optional = true }
libc = "0.2.147"
gsasl-sys = { version = "0.2.4", default-features = true, optional = true }
base64 = "0.21.2"

[build-dependencies]
prost-build = { version = "0.11" }

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.5"
which = "4.4"

[features]
default = ["token", "kerberos", "object_store"]
object_store = ["dep:object_store", "dep:async-trait", "dep:chrono"]
token = ["gsasl-sys"]
kerberos = ["rsasl"]

[profile.dev]
split-debuginfo = "packed"
