[package]
name = "hdfs-native-python"
version = "0.9.1"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Python bindings for native HDFS client implementation in Rust"
license = "Apache-2.0"
publish = false
exclude = [
    ".gitignore",
    ".github/",
    
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_internal"
crate-type = ["cdylib"]
doc = false

[package.metadata.maturin]
name = "hdfs_native._internal"

[dependencies]
bytes = { workspace = true } 
env_logger = "0.10"
hdfs-native = { path = "../crates/hdfs-native" }
log = "0.4"
pyo3 = { version = "0.20", features = ["extension-module", "abi3", "abi3-py38"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
kerberos = ["hdfs-native/kerberos"]
