[package]
name = "hdfs-native-python"
version = "0.11.3"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Python bindings for native HDFS client implementation in Rust"
license = "Apache-2.0"
publish = false
exclude = [
    ".gitignore",
    ".github/",
    
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_internal"
crate-type = ["cdylib"]
doc = false

[package.metadata.maturin]
name = "hdfs_native._internal"

[dependencies]
bytes = { workspace = true } 
env_logger = { workspace = true }
futures = { workspace = true }
hdfs-native = { path = "../rust" }
log = { workspace = true }
pyo3 = { version = "0.24", features = ["extension-module", "abi3", "abi3-py39"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
