[package]
name = "hdfs-native-python"
version = "0.14.1"
edition = "2024"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Python bindings for native HDFS client implementation in Rust"
license = "Apache-2.0"
publish = false
exclude = [
    ".gitignore",
    ".github/",
    
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_internal"
crate-type = ["cdylib"]
doc = false

[package.metadata.maturin]
name = "hdfs_native._internal"

[dependencies]
bytes = { workspace = true } 
env_logger = { workspace = true }
futures = { workspace = true }
# Enable KMS with the pure-Rust TLS backend so published wheels support reading
# and writing files in HDFS encryption zones out of the box, without requiring a
# system TLS library at build time.
hdfs-native = { path = "../rust", features = ["kms-rustls-tls"] }
log = { workspace = true }
pyo3 = { version = "0.28", features = ["extension-module", "abi3", "abi3-py310", "experimental-async"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
