[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "hdfs-native"
description = "Python bindings for hdfs-native Rust library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typing-extensions",
    "fsspec"
]


[project.optional-dependencies]
devel = [
    "mypy~=1.13.0",
    "ruff~=0.7.2",
    "pytest~=8.3",
    "pytest-benchmark~=5.1"
]

[project.urls]
repository = "https://github.com/Kimahriman/hdfs-native"

[project.entry-points."fsspec.specs"]
hdfs = "hdfs_native.fsspec.HdfsFileSystem"
viewfs = "hdfs_native.fsspec.HdfsFileSystem"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hdfs_native._internal"

[tool.mypy]
files = [
    "hdfs_native/**/*.py",
    "hdfs_native/**/*.pyi",
]

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "hdfs_native",
]
addopts = "-m 'not benchmark'"

[tool.ruff.lint]
extend-select = ["I"] 
