[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "hdfs-native"
description = "Python bindings for hdfs-native Rust library"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "typing-extensions",
    "fsspec"
]


[project.optional-dependencies]
devel = [
    "mypy~=1.18.2",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-benchmark~=5.2",
    "ruff~=0.14.4"
]

docs = [
    # https://github.com/snowballstem/snowball/issues/229
    "snowballstemmer<3",
    "sphinx~=8.1",
    "sphinx-automodapi~=0.18",
    "sphinx-rtd-theme~=3.0"
]

[project.urls]
repository = "https://github.com/Kimahriman/hdfs-native"
documentation = "https://hdfs-native.readthedocs.io/"

[project.scripts]
hdfsn = "hdfs_native.cli:main"

[project.entry-points."fsspec.specs"]
hdfs = "hdfs_native.fsspec.HdfsFileSystem"
viewfs = "hdfs_native.fsspec.ViewfsFileSystem"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "hdfs_native._internal"

[tool.mypy]
files = [
    "hdfs_native/**/*.py",
    "hdfs_native/**/*.pyi",
]

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "hdfs_native",
]
addopts = "-m 'not benchmark'"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
extend-select = ["I"] 
