[package]
name = "hdfs-native"
version = "0.11.2"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Native HDFS client implementation in Rust"
readme = "../README.md"
license = "Apache-2.0"

[dependencies]
aes = "0.8"
base64 = "0.22"
bitflags = "2"
bytes = { workspace = true }
cbc = "0.1"
chrono = "0.4"
cipher = "0.4"
crc = "3.2"
ctr = "0.9"
des = "0.8"
dns-lookup = "2"
futures = { workspace = true }
glob = "0.3.1"
g2p = "1"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
libloading = "0.8"
log = { workspace = true }
md-5 = "0.10"
num-traits = "0.2"
once_cell = "1"
prost = "0.13"
prost-types = "0.13"
rand = "0.9"
regex = "1"
roxmltree = "0.20"
socket2 = "0.5"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
which = { version = "7", optional = true }
whoami = "1"

[target.'cfg(unix)'.dependencies]
# Just used for benchmarks
fs-hdfs3 = { version = "0.1.12", optional = true }

[build-dependencies]
prost-build = { version = "0.13", optional = true }
protobuf-src = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
env_logger = { workspace = true }
serial_test = "3"
tempfile = "3"
which = "7"

[features]
generate-protobuf = ["prost-build", "protobuf-src"]
integration-test = ["which"]
benchmark = ["fs-hdfs3", "which"]

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "rpc"
harness = false
