[package]
name = "hdfs-native"
version = "0.14.1"
edition = "2024"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Native HDFS client implementation in Rust"
readme = "../README.md"
license = "Apache-2.0"

[dependencies]
aes = "0.9"
base64 = "0.22"
bitflags = "2"
bumpalo = "3.20.3"
bytes = { workspace = true }
cbc = "0.2"
chrono = "0.4"
cipher = "0.5"
crc = "3.4"
ctr = "0.10"
des = "0.9"
dns-lookup = "3"
futures = { workspace = true }
g2p = "1"
hex = "0.4"
hmac = "0.13"
libc = "0.2"
libloading = "0.9"
log = { workspace = true }
md-5 = "0.11"
num-traits = "0.2"
once_cell = "1"
prost = "0.14"
prost-types = "0.14"
rand = "0.10"
regex = "1"
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json"] }
roxmltree = "0.21.1"
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
socket2 = "0.6"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
which = { version = "8", optional = true }
whoami = "2"

[target.'cfg(unix)'.dependencies]
# Just used for benchmarks
fs-hdfs3 = { version = "0.1.12", optional = true }

[build-dependencies]
prost-build = { version = "0.14", optional = true }
protobuf-src = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio", "async_futures"] }
env_logger = { workspace = true }
serial_test = "3"
tempfile = "3"
which = "8"
indoc = "2"
wiremock = "0.6"

[features]
generate-protobuf = ["prost-build", "protobuf-src"]
integration-test = ["which"]
benchmark = ["fs-hdfs3", "which"]
# Hadoop KMS REST client for HDFS Transparent Data Encryption. Off by default:
# enabling it pulls in reqwest and its HTTP/TLS dependency stack. `kms` alone
# supports plaintext (http) KMS endpoints; pick a TLS-enabled variant below for
# https. `kms-rustls-tls` keeps the build pure-Rust; `kms-native-tls` links the
# system TLS library (OpenSSL/Secure Transport/SChannel).
kms = ["dep:reqwest", "dep:serde", "dep:serde_json"]
kms-rustls-tls = ["kms", "reqwest/rustls"]
kms-native-tls = ["kms", "reqwest/native-tls"]

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "rpc"
harness = false
