[package]
name = "hdfs-native-object-store"
version = "0.8.0"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs", "object_store"]
description = "object_store implementation for Native HDFS client"
readme = "../../README.md"
license = "Apache-2.0"

[dependencies]
async-trait = { version = "0.1" }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hdfs-native = { path = "../hdfs-native", version = "0.8" }
object_store = { version = "0.9", features = ["cloud"] }
thiserror = "1"
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "sync", "time"] }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"
serial_test = "2.0.0"
tempfile = "3"
which = "4"

[features]
kerberos = ["hdfs-native/kerberos"]

integration-test = ["hdfs-native/integration-test"]