[package]
name = "hdfs-native-objectstore"
version = "0.5.0"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "objectstore implementation for Native HDFS client"
readme = "../README.md"
license = "Apache-2.0"

[dependencies]
async-trait = { version = "0.1" }
bytes = { workspace = true }
chrono = { version = "0.4" }
futures = { workspace = true }
hdfs-native = { path = "../hdfs-native", features = ["token", "kerberos"] }
object_store = { version = "0.7", features = ["cloud"] }
thiserror = "1"
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "sync", "time"] }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"
serial_test = "2.0.0"
tempfile = "3"
which = "4"


[features]
integration-test = ["hdfs-native/integration-test"]