[package]
name = "hdfs-native"
version = "0.5.0"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Native HDFS client implementation in Rust"
readme = "../../README.md"
license = "Apache-2.0"

[dependencies]
base64 = "0.21"
bytes = { workspace = true }
crc = "3"
futures = { workspace = true }
g2p = "1"
gsasl-sys = { version = "0.2", default-features = false, optional = true }
libc = "0.2"
libgssapi = { version = "0.6", default-features = false, optional = true }
log = "0.4"
num-traits = "0.2"
prost = "0.11"
prost-types = "0.11"
roxmltree = "0.18"
socket2 = "0.5"
thiserror = "1"
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros", "sync", "time"] }
url = "2"
users = { version = "0.11", default-features = false }
uuid = { version = "1", features = ["v4"] }
which = { version = "4", optional = true }

[build-dependencies]
prost-build = { version = "0.11", optional = true }
protobuf-src = { version = "1.1", optional = true }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.10"
serial_test = "2.0.0"
tempfile = "3"
which = "4"

[features]
kerberos = ["libgssapi"]
token = ["gsasl-sys"]

generate-protobuf = ["prost-build", "protobuf-src"]
integration-test = ["which"]
benchmark = []

[[bench]]
name = "ec"
harness = false
