[package]
name = "hdfs-native"
version = "0.9.1"
edition = "2021"
authors = ["Adam Binford <adamq43@gmail.com>"]
homepage = "https://github.com/Kimahriman/hdfs-native"
repository = "https://github.com/Kimahriman/hdfs-native"
keywords = ["hadoop", "hdfs"]
description = "Native HDFS client implementation in Rust"
readme = "../../README.md"
license = "Apache-2.0"

[dependencies]
aes = "0.8"
base64 = "0.21"
bytes = { workspace = true }
cbc = "0.1"
chrono = { workspace = true }
cipher = "0.4"
crc = "3.2"
ctr = "0.9"
des = "0.8"
futures = { workspace = true }
g2p = "1"
hex = "0.4"
hmac = "0.12"
libc = "0.2"
libgssapi = { version = "0.7", default-features = false, optional = true }
log = { workspace = true }
md-5 = "0.10"
num-traits = "0.2"
once_cell = "1"
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
regex = "1"
roxmltree = "0.18"
socket2 = "0.5"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "macros", "sync", "time"] }
url = "2"
users = { version = "0.11", default-features = false }
uuid = { version = "1", features = ["v4"] }
which = { version = "4", optional = true }

[build-dependencies]
prost-build = { version = "0.12", optional = true }
protobuf-src = { version = "1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }
env_logger = "0.10"
fs-hdfs3 = "0.1.12"
serial_test = "2.0.0"
tempfile = "3"
which = "4"

[features]
kerberos = ["libgssapi"]

generate-protobuf = ["prost-build", "protobuf-src"]
integration-test = ["which"]
benchmark = ["which"]

[[bench]]
name = "ec"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "rpc"
harness = false
